@@ -9,8 +9,10 @@ kernel-2.6 \
 usable \
   linux-image-2.6-486 \
   linux-image-2.6-686 \
+  linux-image-2.6-686-bigmem \
   linux-image-2.6.18-1-486 \
-  linux-image-2.6.18-1-686
+  linux-image-2.6.18-1-686 \
+  linux-image-2.6.18-1-686-bigmem
 unusable \
   linux-image-2.6-k7 \
   linux-image-2.6.18-1-k7
