@@ -8,13 +8,11 @@ kernel-2.6 \
   linux-image-2.6-486
 usable \
   linux-image-2.6-486 \
-  linux-image-2.6-686-smp \
+  linux-image-2.6-686-bigmem \
   linux-image-2.6-686 \
   linux-image-2.6.18-1-486 \
-  linux-image-2.6.18-1-686-smp \
+  linux-image-2.6.18-1-686-bigmem \
   linux-image-2.6.18-1-686
 unusable \
-  linux-image-2.6-k7-smp \
   linux-image-2.6-k7 \
-  linux-image-2.6.18-1-k7-smp \
   linux-image-2.6.18-1-k7
