@@ -9,11 +9,9 @@ usable \
   linux-image-2.6-486 \
   linux-image-2.6.18-1-486
 unusable \
-  linux-image-2.6-686-smp \
+  linux-image-2.6-686-bigmem \
   linux-image-2.6-686 \
-  linux-image-2.6-k7-smp \
   linux-image-2.6-k7 \
-  linux-image-2.6.18-1-686-smp \
+  linux-image-2.6.18-1-686-bigmem \
   linux-image-2.6.18-1-686 \
-  linux-image-2.6.18-1-k7-smp \
   linux-image-2.6.18-1-k7
